<resources>
    <string name="app_name" translatable="false">Wesync</string>
    <string name="stop_button" translatable="false">Stop</string>
    <string name="plus_50" translatable="false">+50</string>
    <string name="plus_10" translatable="false">+10</string>
    <string name="plus_1" translatable="false">+1</string>
    <string name="minus_50" translatable="false">-50</string>
    <string name="minus_10" translatable="false">-10</string>
    <string name="minus_1" translatable="false">-1</string>
    <string name="bpm_s" translatable="false">bpm</string>
    <string name="play_button" translatable="false">Play</string>
    <string name="test_button">Test Ping</string>
    <string name="new_session">New Session</string>
    <string name="join_session">Join Session</string>
    <string name="bpm_placeholder">120</string>
    <string name="dismiss_session">End Session</string>
    <string name="quit_session">Quit Session</string>
    <string name="current_session">"This is %1$s's Session."</string>
    <string name="current_joined_session">"You have joined %1$s's Session.\nYou have to follow your Session Leader's instruction."</string>
    <string name="connecting">"Connecting to %1$s's Session…"</string>
    <string name="advertising">STOP\naccepting user</string>
    <string name="not_advertising">START\naccepting user</string>
    <string name="notification_manager">Wesync Notification Manager</string>
    <string name="notification_main">Wesync: Synchronized Metronome</string>
    <string name="not_connected">You are playing by yourself.\nCreate a new Session or join an existing Session around you.</string>
    <string name="need_auto_time">To ensure accuracy of this application, We recommend you to turn on automatic date and time on your Settings.</string>
    <string name="no_internet">No internet connection detected. If you wish to improve your sync, please connect to the internet and restart the app.</string>
    <string name="offset">Clock Offset (with NTP server): %1$d ms</string>
</resources>
